--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sitemap-generator",
+    "name": "haikson/sitemap-generator",
     "type": "library",
     "description": "Sitemap crawler and generator class",
     "keywords": ["sitemap","crawler"],
